--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -2,9 +2,9 @@
 // Colors
 $text-color-body: #474c4f;
 $btnlink-color: white;
-$head-foot-color: black;
+$head-foot-color: #2c3e50;
 $btn-color: $head-foot-color;
-$btn-hover-color: #383737;
+// $btn-hover-color: #383737;
 $accent-color:  #EA7D1E;
 $border-color: #939292;
 $box-bg-color: #e0dede;
