--- a/public/css/app.css
+++ b/public/css/app.css
@@ -483,14 +483,12 @@ button {
   height: 3rem;
   display: block;
   border: none;
-  background-color: black;
+  background-color: #2c3e50;
   color: white;
   font-family: inherit;
   cursor: pointer;
   text-transform: uppercase;
   font-weight: 400;
-  outline: none;
-  padding: 0.5rem 0.8rem;
   margin-top: 2rem;
 }
 
@@ -517,11 +515,22 @@ button:hover {
 
 .icon-btn:hover {
   background-color: #EA7D1E;
-  /*$btn-hover-color;*/
 }
 
 .icon-btn .btn-txt {
   padding-left: 1rem;
+}
+
+.edit-btn,
+.trash-btn,
+.add-btn {
+  fill: #2c3e50;
+}
+
+.edit-btn:hover .icon-dark,
+.trash-btn:hover .icon-dark,
+.add-btn:hover .icon-dark {
+  fill: #EA7D1E;
 }
 
 .trash-btn {
@@ -537,7 +546,6 @@ button:hover {
 .button-container {
   width: 100%;
   max-width: 50rem;
-  border: 1px solid red;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -545,17 +553,16 @@ button:hover {
   -webkit-box-direction: normal;
       -ms-flex-flow: row wrap;
           flex-flow: row wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
 }
 
 .button-container .filter-btn {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
-  max-width: 10rem;
-  margin: 0 0 1rem 0;
+  max-width: 6rem;
+  margin: 0 0.5rem 0.5rem 0;
+  font-size: 0.8rem;
+  height: 2.5rem;
 }
 
 /*------------------------------------------------------------------------------
@@ -617,7 +624,20 @@ a:hover,
 }
 
 .icon {
-  fill: #fff;
+  fill: white;
+}
+
+.icon-reverse {
+  fill: #474c4f;
+  cursor: pointer;
+}
+
+.icon-reverse:hover .icon-reverse {
+  fill: #EA7D1E;
+}
+
+ul {
+  margin: 0;
 }
 
 .list-unstyled {
@@ -648,7 +668,7 @@ header {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  background-color: black;
+  background-color: #2c3e50;
   color: white;
   -webkit-box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.3);
           box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.3);
@@ -660,10 +680,10 @@ header .header-content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -679,19 +699,18 @@ header .header-content .logo-container {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  width: 100%;
 }
 
 header .header-content .logo-container .logo {
   margin: 0;
   font-family: "Pacifico";
   letter-spacing: 0.1rem;
-  font-size: 1.8rem;
+  font-size: 1.6rem;
 }
 
 header .header-content nav {
+  margin-top: 1rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -705,11 +724,7 @@ header .header-content nav {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -ms-flex-line-pack: justify;
-      align-content: space-between;
-  -webkit-box-flex: 2;
-      -ms-flex-positive: 2;
-          flex-grow: 2;
+  width: 100%;
 }
 
 header .header-content .nav-item,
@@ -736,10 +751,19 @@ header .header-content .footer-item:hover .icon {
   fill: #EA7D1E;
 }
 
+header .header-content .active {
+  color: #EA7D1E;
+}
+
+header .header-content .active .icon {
+  fill: #EA7D1E;
+}
+
 header .header-content .nav-logged-out {
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  margin-top: 1rem;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 main {
@@ -751,6 +775,22 @@ main {
   -webkit-box-flex: 1;
       -ms-flex: 1 0 auto;
           flex: 1 0 auto;
+}
+
+.header-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .success-container,
@@ -830,10 +870,11 @@ main {
 
 .profile-img {
   width: 90%;
+  border-top: 50%;
   max-width: 10rem;
   height: 12rem;
   margin-right: 2rem;
-  background-color: #939292;
+  background-color: #2c3e50;
 }
 
 .projects-container {
@@ -844,22 +885,18 @@ main {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-flow: column nowrap;
-          flex-flow: column nowrap;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   -ms-flex-line-pack: center;
       align-content: center;
   border-bottom: 1px solid #939292;
   padding: 0.5rem 0;
   font-weight: 700;
-  height: 8rem;
 }
 
 .project-column,
@@ -884,13 +921,9 @@ main {
           justify-content: space-between;
   -ms-flex-line-pack: center;
       align-content: center;
-  width: 25%;
+  width: 15%;
   max-width: 5rem;
-}
-
-.edit-column .edit-btn:hover .icon-smaller,
-.edit-column .trash-btn:hover .icon-smaller {
-  fill: #EA7D1E;
+  min-width: 5rem;
 }
 
 /*------------------------------------------------------------------------------
@@ -914,6 +947,7 @@ main {
           justify-content: space-between;
   -ms-flex-line-pack: center;
       align-content: center;
+  margin-top: 2rem;
 }
 
 .task-card {
@@ -979,7 +1013,7 @@ footer {
   -ms-flex-line-pack: center;
       align-content: center;
   width: 100%;
-  background-color: black;
+  background-color: #2c3e50;
   bottom: 0;
   color: white;
   -ms-flex-negative: 0;
@@ -1010,7 +1044,7 @@ footer a {
   color: white;
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 700px) {
   body {
     font-size: 1.1rem;
   }
@@ -1024,56 +1058,57 @@ footer a {
   }
 
   header {
-    height: 6rem;
+    height: 6rem !important;
   }
 
-  header .header-content {
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
+  .header-content {
+    -webkit-box-orient: horizontal !important;
+    -webkit-box-direction: normal !important;
+        -ms-flex-flow: row nowrap !important;
+            flex-flow: row nowrap !important;
+    -webkit-box-pack: justify !important;
+        -ms-flex-pack: justify !important;
+            justify-content: space-between !important;
   }
 
-  header .header-content .logo-container {
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
+  .header-content .logo-container {
+    -webkit-box-pack: start !important;
+        -ms-flex-pack: start !important;
+            justify-content: flex-start !important;
+    width: 35% !important;
   }
 
-  header .header-content .logo-container .logo {
+  .header-content .logo-container .logo {
     font-size: 2rem;
   }
 
-  header .header-content .nav-item {
+  .header-content nav {
+    width: 65% !important;
+    max-width: 30rem;
+  }
+
+  .header-content nav .nav-item {
     font-size: 1rem;
   }
 
   .project-divider {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-flow: row wrap;
-            flex-flow: row wrap;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
-    -ms-flex-line-pack: center;
-        align-content: center;
     height: 4rem;
   }
 
   .project-column,
   .client-column {
-    width: 35%;
+    width: 30%;
     margin-bottom: 0;
   }
 
-  .edit-column {
-    width: 10%;
+  .client-column {
+    width: 30%;
   }
 
   /*------------------------------------------------------------------------------
@@ -1091,7 +1126,7 @@ footer a {
   }
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 870px) {
   /*------------------------------------------------------------------------------
     FORMS-STYLING DESKTOP
 ------------------------------------------------------------------------------*/
