--- a/resources/assets/sass/_forms.scss
+++ b/resources/assets/sass/_forms.scss
@@ -35,10 +35,6 @@ label {
     margin-bottom: .5rem;
 }
 
-input[type=checkbox], input[type=radio] {
-
-}
-
 button {
     width: 100%;
     height: 3rem;
@@ -50,14 +46,13 @@ button {
     cursor: pointer;
     text-transform: uppercase;
     font-weight: 400;
-    outline: none;
-    padding: 0.5rem 0.8rem;
+    // outline: none;
+    // padding: 0.5rem 0.8rem;
     margin-top: 2rem;
 
     &:hover {
         // background-color: $btn-hover-color;
         background-color: $accent-color;
-        // color: $accent-color;
     }
 }
 
@@ -69,7 +64,7 @@ button {
     padding: 0.5rem 1.2rem;
 
     &:hover {
-        background-color: $accent-color; /*$btn-hover-color;*/
+        background-color: $accent-color;
         .icon-btn {
             // fill: $accent-color;
         }
@@ -77,6 +72,16 @@ button {
 
     .btn-txt {
         padding-left: 1rem;
+    }
+}
+
+.edit-btn, .trash-btn, .add-btn {
+    fill: $btn-color;
+    
+    &:hover {
+        .icon-dark {
+            fill: $accent-color;
+        }
     }
 }
 
@@ -93,15 +98,14 @@ button {
 .button-container {
     width: 100%;
     max-width: 50rem;
-    border: 1px solid red;
     display: flex;
     flex-flow: row wrap;
-    // align-content: space-between;
-    justify-content: space-between;
 
     .filter-btn {
         flex-grow: 1;
-        max-width: 10rem;
-        margin: 0 0 1rem 0;
+        max-width: 6rem;
+        margin: 0 0.5rem 0.5rem 0;
+        font-size: 0.8rem;
+        height: 2.5rem;
     }
 }
