--- a/resources/assets/sass/_tablet.scss
+++ b/resources/assets/sass/_tablet.scss
@@ -11,46 +11,50 @@ h2 {
 }
 
 header {
-    height: 6rem;
+    height: 6rem !important;
+}
 
-    .header-content {
-        justify-content: flex-start;
+.header-content {
+	flex-flow: row nowrap !important;
+	justify-content: space-between !important;
 
-		.logo-container {
-			justify-content: flex-start;
+	.logo-container {
+		justify-content: flex-start !important;
+		width: 35% !important;
 
-			.logo {
-                font-size: 2rem;
-            }
+		.logo {
+			font-size: 2rem;
 		}
-		  
+	}
+
+	nav {
+		width: 65% !important;
+		max-width: 30rem;
+
 		.nav-item {
 			font-size: 1rem;
 		}
 	}
 }
 
-// .profile-container {
-//     width: 70%;
-// }
-
 .project-divider {
-    display: flex;
-    flex-flow: row wrap;
     align-items: center;
     justify-content: space-between;
-    align-content: center;
 	height: 4rem;
 }
 
 .project-column, .client-column {
-    width: 35%;
+    width: 30%;
 	margin-bottom: 0;
 }
 
-.edit-column {
-    width: 10%;
+.client-column {
+	width: 30%;
 }
+
+// .edit-column {
+//     width: 10%;
+// }
 
 /*------------------------------------------------------------------------------
     FORMS-STYLING TABLET
