--- a/resources/assets/sass/_forms.scss
+++ b/resources/assets/sass/_forms.scss
@@ -1,7 +1,7 @@
 form {
     // border: 1px solid red;
     max-width: 600px;
-    padding-top: 2rem;
+    // padding-top: 2rem;
 }
 
 .delete-form {
@@ -46,8 +46,6 @@ button {
     cursor: pointer;
     text-transform: uppercase;
     font-weight: 400;
-    // outline: none;
-    // padding: 0.5rem 0.8rem;
     margin-top: 2rem;
 
     &:hover {
@@ -75,7 +73,18 @@ button {
     }
 }
 
-.edit-btn, .trash-btn, .add-btn {
+.icon-btn-small {
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+    margin-top: 0;
+
+    svg {
+        margin-top: 0.5rem;
+    }
+}
+
+.edit-btn, .trash-btn {
     fill: $btn-color;
     
     &:hover {
@@ -95,17 +104,17 @@ button {
     }
 }
 
-.button-container {
-    width: 100%;
-    max-width: 50rem;
-    display: flex;
-    flex-flow: row wrap;
+// .button-container {
+//     width: 100%;
+//     max-width: 50rem;
+//     display: flex;
+//     flex-flow: row wrap;
 
-    .filter-btn {
-        flex-grow: 1;
-        max-width: 6rem;
-        margin: 0 0.5rem 0.5rem 0;
-        font-size: 0.8rem;
-        height: 2.5rem;
-    }
-}
+//     .filter-btn {
+//         flex-grow: 1;
+//         max-width: 6rem;
+//         margin: 0 0.5rem 0.5rem 0;
+//         font-size: 0.8rem;
+//         height: 2.5rem;
+//     }
+// }
