--- a/resources/assets/sass/_tablet.scss
+++ b/resources/assets/sass/_tablet.scss
@@ -10,8 +10,12 @@ h2 {
 	font-size: $font-size-h2-larger;
 }
 
+h3 {
+	font-size: $font-size-h3-larger;
+}
+
 header {
-    height: 6rem !important;
+    height: 6rem;
 }
 
 .header-content {
@@ -29,11 +33,17 @@ header {
 
 	nav {
 		width: 65% !important;
-		max-width: 30rem;
+		max-width: 40rem !important;
+		margin-top: 0 !important;
+		// border: 1px solid green;
 
 		.nav-item {
 			font-size: 1rem;
 		}
+	}
+
+	.nav-logged-out {
+		justify-content: flex-end !important;
 	}
 }
 
