--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -16,13 +16,15 @@ $progress-color: #e5ae2d;
 $font-family-body: "Raleway", sans-serif;
 $font-family-logo:"Pacifico";
 $font-size-base: 1rem; //14px
-$font-size-h1-base: 1.4rem;
-$font-size-h2-base: 1.2rem;
+$font-size-h1-base: 1.5rem;
+$font-size-h2-base: 1.3rem;
+$font-size-h3-base: 1.1rem;
 $line-height-base: 1.6;
 
 $font-size-larger: 1.1rem;
 $font-size-h1-larger: 1.6rem;
 $font-size-h2-larger: 1.4rem;
+$font-size-h3-larger: 1.2rem;
 $line-height-larger: 1.8;
 
 // // Body
