Changing route views and filtering tasks on status

--- a/resources/assets/sass/_base.scss
+++ b/resources/assets/sass/_base.scss
@@ -168,7 +168,7 @@ main {
     align-items: center;
     box-sizing: border-box;
     max-width: 30rem;
-    border: 1px solid red;
+    // border: 1px solid red;
 
     a {
         text-transform: uppercase;
