--- a/resources/assets/sass/_base.scss
+++ b/resources/assets/sass/_base.scss
@@ -284,7 +284,7 @@ main {
     width: 100%;
     display: flex;
     flex-flow: row wrap;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
     align-content: center;
     margin-top: 2rem;
@@ -295,6 +295,7 @@ main {
     max-width: 20rem;  
     padding: 1.5rem 1.5rem 1.5rem 1.5rem;
     margin: 0 0 0.8rem 0;
+    height: 240px;
     .task-meta {
         font-size:0.8rem;
     }
@@ -302,10 +303,10 @@ main {
 
 .task-header {
     display: flex;
-    flex-flow: row wrap;
-    align-items: center;
+    // flex-flow: row wrap;
+    // align-items: center;
     justify-content: space-between;
-    align-content: center;
+    // align-content: center;
 
     h2 {
         margin: 0;
